aws/argocd/addons/kasten-io/httproute.yaml
# Auto-generated file, do not edit directly
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kasten-route
  namespace: kasten-io
spec:
  parentRefs:
    - name: iceberg-interface-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - kasten.mhaigh-iceberg-interface.k8sbackup.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /k10
      backendRefs:
        - name: gateway
          port: 80
